name:                rhythmgn
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/brettmilford/rhythmgn#readme
license:             BSD3
license-file:        LICENSE
author:              Brett Milford
maintainer:          brettmilford@gmail.com
copyright:           2017 Brett Milford
category:            Music
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     RhythmGn
  build-depends:       base >= 4.7 && < 5
                      ,Euterpea
                      ,random
                      ,markov-chain
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/brettmilford/rhythmgn
